--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -155,10 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the data: (699, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = data.dropna()\n",
+    "print(\"Shape of the data:\", data.shape)"
+   ]
   }
  ],
  "metadata": {
