--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -170,6 +170,82 @@
     "data = data.dropna()\n",
     "print(\"Shape of the data:\", data.shape)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SPLITTING DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## training input and output\n",
+    "train_input = np.array(data.x[0:500]).reshape(500,1)\n",
+    "train_output = np.array(data.x[0:500]).reshape(500,1)\n",
+    "\n",
+    "## validation data input and output\n",
+    "test_input = np.array(data.x[500:700]).reshape(199,1)\n",
+    "test_output = np.array(data.x[500:699]).reshape(199,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training data shape = (500, 1)\n",
+      "training data shape = (500, 1)\n",
+      "testing data shape = (199, 1)\n",
+      "testing data shape = (199, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"training data shape = {train_input.shape}\")\n",
+    "print(f\"training data shape = {train_input.shape}\")\n",
+    "print(f\"testing data shape = {test_input.shape}\")\n",
+    "print(f\"testing data shape = {test_input.shape}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color = \"lightblue\">LINEAR REGRESSION</font>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forward Propagation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_propagation(train_input, parameters):\n",
+    "    m = parameters[\"m\"]\n",
+    "    c = parameters[\"c\"]\n",
+    "\n",
+    "    predictions = np.multiply(m, train_input) + c\n",
+    "    return predictions"
+   ]
   }
  ],
  "metadata": {
