--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -246,6 +246,66 @@
     "    predictions = np.multiply(m, train_input) + c\n",
     "    return predictions"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cost function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost_function(predictions,train_output):\n",
+    "    cost = np.mean((train_output - predictions)**2)*0.5\n",
+    "    return cost"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Descent for Back Propagation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df = summation(f(x) - y)/n\n",
+    "\n",
+    "dm = df*x\n",
+    "\n",
+    "dc = df*1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backward_propagation(train_input, train_output, predictions):\n",
+    "\n",
+    "    derivatives = dict()\n",
+    "\n",
+    "    df = predictions - train_input\n",
+    "    dm = np.mean(np.multiply(df, train_input))\n",
+    "    dc = np.mean(df)\n",
+    "\n",
+    "    derivatives[\"dm\"] = dm\n",
+    "    derivatives[\"dc\"] = dc\n",
+    "\n",
+    "    return derivatives\n"
+   ]
   }
  ],
  "metadata": {
