--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
     "\n",
     "    derivatives = dict()\n",
     "\n",
-    "    df = predictions - train_input\n",
+    "    df = predictions - train_output\n",
     "    dm = np.mean(np.multiply(df, train_input))\n",
     "    dc = np.mean(df)\n",
     "\n",
@@ -305,6 +305,38 @@
     "    derivatives[\"dc\"] = dc\n",
     "\n",
     "    return derivatives\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update Parameters"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "m = m - (learning_rate * dm)\n",
+    "\n",
+    "c = c - (learning_rate * dc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_parameters(parameters, derivatives, learning_rate):\n",
+    "\n",
+    "    parameters[\"m\"] = parameters[\"m\"] - learning_rate * derivatives['dm']\n",
+    "    parameters[\"c\"] = parameters[\"c\"] - learning_rate * derivatives['dc']\n",
+    "\n",
+    "    return parameters"
    ]
   }
  ],
